2008-04-09  Janne Jalkanen <jalkanen@apache.org>

        * 2.7.0-svn-8
        
        * [JSPWIKI-115]: Refactored VariableManager to use Reflection.
        Thanks to Stephen Solka.
        
        * [JSPWIKI-219]: Building now works if your username has a space.

2008-04-08  Janne Jalkanen <jalkanen@apache.org>

        * 2.7.0-svn-7
        
        * [JSPWIKI-56] Replaced MultiPartLibrary with Apache Commons
        FileUpload library, as MultiPartLibrary was LGPL.

2007-04-05  Dirk Frederickx <dirk.frederickx@gmail.com>

        * 2.7.0-svn-6
        
        * [JSPWIKI-233] Bugfix PreferencesTab.jsp
        
2007-04-05  Dirk Frederickx <dirk.frederickx@gmail.com>

        * 2.7.0-svn-5
        
        * [JSPWIKI-230] Make TimeZone configuration more user-friendly. Adjusted all jsp time-formatting
        to take timezone setting into account. 
        
2007-04-05  Dirk Frederickx <dirk.frederickx@gmail.com>

        * Commit related JIRA id's
        
2007-04-05  Dirk Frederickx <dirk.frederickx@gmail.com>

        * 2.7.0-svn-4
        
        * Refactored JS to support the Edit Suggestion box, so it's now fully based on mootools.
        The entries in the suggestion box are now clickable: the page or attachment link will be
        inserted in the textarea. Also the handling of the | bar inside a link has been improved.

        * [JSPWiki-200] The length of the entries in the Edit Suggestion are truncated to avoid
        overlap with the main body of the edit area.

        * The build script has been updated to use the YUI compressor. It now compresses both 
        javascript and css files. (this replaces the Dojo compressor, which only handled js)
 
        * In the UserPreferences you can now select the preferred language. 
        The default language is based on the user's browsers setting, but a dropdown allows you to 
        select any of the installed languages.